--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,7 +39,11 @@ security:
     access_control:
         - { path: ^/article/, roles: IS_AUTHENTICATED_FULLY }
         #- { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        # - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        
+        
+    role_hierarchy:
+        ROLE_USER: [ ]
+        ROLE_ADMIN: [ ROLE_USER ]
 
 when@test:
     security:
